--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/service-worker": "^12.0.2",
     "ag-grid-angular": "^25.3.0",
     "ag-grid-community": "^25.3.0",
+    "hammerjs": "^2.0.8",
     "idb-keyval": "^3.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.1.0",
@@ -62,7 +63,7 @@
     "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
     "typedoc": "^0.20.34",
-    "typescript": "^4.2.4",
+    "typescript": "^4.2.3",
     "webpack-bundle-analyzer": "^3.9.0"
   }
 }
