--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "e2e": "ng e2e",
     "analyze:wba": "webpack-bundle-analyzer dist/kbtv-client/stats.json",
     "analyze:sme": "source-map-explorer dist/kbtv-client/**/*.js",
+    "analyze:sme2": "source-map-explorer dist/test-proj/**/*.js",
     "compodoc": "npx compodoc -p tsconfig.json",
     "buildAll": "node scripts/build-all.js",
     "buildLibs": "node scripts/build-libs.js",
