--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ag-grid-community": "^25.3.0",
     "hammerjs": "^2.0.8",
     "idb-keyval": "^3.2.0",
+    "karma-coverage": "^2.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -56,7 +57,6 @@
     "jasmine-spec-reporter": "^5.0.2",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "ng-packagr": "^12.0.2",
