--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/pwa": "^0.901.15",
     "@angular/router": "^12.0.2",
     "@angular/service-worker": "^12.0.2",
+    "@googlemaps/js-api-loader": "^1.12.1",
     "ag-grid-angular": "^25.3.0",
     "ag-grid-community": "^25.3.0",
     "hammerjs": "^2.0.8",
